# inventory-count-automation

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: config.toml
data/input/planilha_base/: modelo_base.xlsx
data/planilha/: Planilha de Inventário_Musical Center.xlsx
data/planilhas/: Planilha de Inventário.xlsx  Planilha de Inventário_Musical Center.xlsx
data/txt/: teste.txt
src/inventory_count_automation/: __main__.py  cli.py  config.py  counter.py  excel_handler.py  reader.py  settings.py
tests/: test_counter.py  test_excel_handler.py  test_reader.py
