[project]
name = "inventory-count-automation"
version = "0.1.0"
description = ""
authors = [
    { name = "Caio Alvino", email = "caioh.alvino22@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.0",
]

[project.scripts]
inventory-count = "inventory_count_automation.__main__:main"

[tool.poetry]
packages = [{ include = "inventory_count_automation", from = "src" }]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
